--- a/public/style.css
+++ b/public/style.css
@@ -6,16 +6,29 @@
     padding-top: 100px;
   }
   
+  .h1 {
+    color: rgb(0, 0, 0);
+    text-shadow: 4px 2px 4px rgb(255, 255, 255)
+  }
+
+
   .questions {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+  }
+
+  .question-area {
+    background-color: rgb(213, 208, 208);
+    width: 95%;
+    border-radius: 10px;
   }
   
   .question-box {
     margin: 15px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     border-radius: 10px;
+    width: auto;
     padding: 0px 40px 10px 40px;
     background-color: rgb(21, 21, 21);
     color: rgb(230, 230, 230);
@@ -50,6 +63,17 @@
     margin: 20px;
     background-color: darksalmon;
   }
+
+  .try-again {
+    margin: 5px;
+    padding: 10px 20px;
+    border-radius: 20px;
+    border: none;
+    font-size: large;
+    text-shadow: 2px 2px rgb(0, 0, 0);
+    background-color: rgb(248, 24, 196);
+    color: rgb(226, 226, 226);
+  }
   
   select {
     margin: 5px;
@@ -65,7 +89,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
   }
   
   .answer-display.correct {
