--- a/public/style.css
+++ b/public/style.css
@@ -43,12 +43,13 @@
   .question-button {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     width: auto;
   }
   
   button {
     margin: 3px;
-    padding: 5px 5px;
+    padding: 5px 7px;
     border-radius: 20px;
     border: none;
     background-color: rgb(24, 248, 248);
